# ChangeLog for gnome-extra/polkit-gnome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.24 2011/01/31 16:41:42 eva Exp $

  31 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org>
  polkit-gnome-0.96-r1.ebuild, polkit-gnome-0.99.ebuild:
  Pin gtk+ to slot 2.

  28 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> polkit-gnome-0.99.ebuild:
  Remove unused app-text/scrollkeeper and gnome-base/gconf dependencies wrt
  #349954 by Andrew Brouwers.

  12 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  polkit-gnome-0.96-r1.ebuild:
  ppc stable wrt #343155

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  polkit-gnome-0.96-r1.ebuild:
  alpha/arm/ia64/sparc stable wrt #343155

  03 Nov 2010; Markus Meier <maekke@gentoo.org> polkit-gnome-0.96-r1.ebuild:
  x86 stable, bug #343155

  28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  polkit-gnome-0.96-r1.ebuild:
  amd64/ppc64 stable wrt #343155

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  polkit-gnome-0.96.ebuild:
  ppc64 stable wrt #324077

  08 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -polkit-gnome-0.94.ebuild, -polkit-gnome-0.95.ebuild:
  Clean up old revisions.

*polkit-gnome-0.99 (25 Sep 2010)

  25 Sep 2010; <nirbheek@gentoo.org> +polkit-gnome-0.99.ebuild,
  metadata.xml:
  Bump to 0.99, masked due to >=glib-2.25 requirement

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> polkit-gnome-0.96.ebuild:
  Marked ppc for bug #324077.

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> polkit-gnome-0.96.ebuild:
  alpha/ia64/sparc stable

*polkit-gnome-0.96-r1 (11 Aug 2010)

  11 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  +polkit-gnome-0.96-r1.ebuild:
  Replace OnlyShowIn=GNOME; with NotShowIn=KDE; because polkit-gnome is
  useful also for LXDE, XFCE, and others.

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> polkit-gnome-0.95.ebuild,
  polkit-gnome-0.96.ebuild:
  Drop HPPA keywording (bug #324511).
