@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/polkit-gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.24 2011/01/31 16:41:42 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/polkit-gnome/ChangeLog,v 1.25 2011/02/23 13:33:47 nirbheek Exp $
+
+*polkit-gnome-0.100 (23 Feb 2011)
+
+  23 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  +polkit-gnome-0.100.ebuild,
+  +files/polkit-gnome-authentication-agent-1.desktop:
+  Bump to 0.100, manually add autostart desktop file
 
   31 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org>
   polkit-gnome-0.96-r1.ebuild, polkit-gnome-0.99.ebuild:
